[package]
name = 'git-stree'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = ['development-tools']
description = 'Library for working with my improved git subtree schema'
edition = '2021'
keywords = ['git']
license = 'LGPL-3.0-or-later'
repository = 'https://github.com/kalkin/rust-git-stree'
version = '0.2.1'

[dependencies]
configparser = '3'
getset = '0.1.*'
git-wrapper = '0.5.*'
lenient_semver = '^0.4'
posix-errors = '1'
regex = '1'
semver = '1'

[dev-dependencies]
tempdir = '0.3.*'
